--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -4,7 +4,6 @@
 @use "../abstracts/" as vars;
 
 body{
-    background: #F9F9F9;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,7 +12,7 @@ body{
 
 .error{
     text-align: center;
-    margin-bottom: 10px;
+    margin-top: 10px;
     height: 20px;
 }
 
@@ -54,18 +53,29 @@ body{
     button.operator-sub{grid-area: 5/4 / auto/auto;}
     button.operator-add{grid-area: 6/4 / auto/auto;}
     
-    button[class^="operator"],
-    .calc,
-    .delete{
-        font-size: 2rem;
-        background-color: vars.$main-clr;
+    button{
+        color: #444;
         transition: filter .2s;
+        
         &:hover{
             filter: brightness(.9);
         }
         &:active{
             filter: brightness(.8);
         }
+    }
+
+    button[data-par],
+    button[data-clr],
+    button[data-del],
+    button[class^="operator"],
+    .calc{
+        font-size: 2rem;
+    }
+
+    button[data-operator],
+    .calc{
+        background-color: vars.$main-clr;
     }
 
 
