--- a/styles/main.css
+++ b/styles/main.css
@@ -364,7 +364,6 @@ a:visited {
 ================ CHUNK: BASE/LAYOUT
 ===========================================*/
 body {
-  background: #F9F9F9;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -373,7 +372,7 @@ body {
 
 .error {
   text-align: center;
-  margin-bottom: 10px;
+  margin-top: 10px;
   height: 20px;
 }
 
@@ -425,22 +424,26 @@ body {
 .calculator-wrapper button.operator-add {
   grid-area: 6/4/auto/auto;
 }
-.calculator-wrapper button[class^=operator],
-.calculator-wrapper .calc,
-.calculator-wrapper .delete {
-  font-size: 2rem;
-  background-color: rgb(235, 196, 69);
+.calculator-wrapper button {
+  color: #444;
   transition: filter 0.2s;
 }
-.calculator-wrapper button[class^=operator]:hover,
-.calculator-wrapper .calc:hover,
-.calculator-wrapper .delete:hover {
+.calculator-wrapper button:hover {
   filter: brightness(0.9);
 }
-.calculator-wrapper button[class^=operator]:active,
-.calculator-wrapper .calc:active,
-.calculator-wrapper .delete:active {
+.calculator-wrapper button:active {
   filter: brightness(0.8);
+}
+.calculator-wrapper button[data-par],
+.calculator-wrapper button[data-clr],
+.calculator-wrapper button[data-del],
+.calculator-wrapper button[class^=operator],
+.calculator-wrapper .calc {
+  font-size: 2rem;
+}
+.calculator-wrapper button[data-operator],
+.calculator-wrapper .calc {
+  background-color: rgb(235, 196, 69);
 }
 
 button {
