--- a/styles/main.css
+++ b/styles/main.css
@@ -378,8 +378,8 @@ body {
 
 .calculator-wrapper {
   display: grid;
-  grid-template-columns: repeat(4, -webkit-max-content);
-  grid-template-columns: repeat(4, max-content);
+  grid: "screen screen  screen  screen" "prev   history history next  " "parL   parR    clr     del   " "seven  eight   nine    div   " "four   five    six     mul " "one    two     three   sub   " "zero   fp      calc    add   "/max-content -webkit-max-content -webkit-max-content -webkit-max-content;
+  grid: "screen screen  screen  screen" "prev   history history next  " "parL   parR    clr     del   " "seven  eight   nine    div   " "four   five    six     mul " "one    two     three   sub   " "zero   fp      calc    add   "/max-content max-content max-content max-content;
   gap: 8px;
   place-items: stretch;
   place-content: center;
@@ -396,7 +396,7 @@ body {
   font-size: 1.5rem;
   width: 265px;
   background: rgb(238, 230, 195);
-  grid-area: 1/1/auto/span 4;
+  grid-area: screen;
   color: rgba(50, 50, 50, 0.9);
 }
 .calculator-wrapper .screen:-moz-placeholder-shown {
@@ -413,16 +413,78 @@ body {
   border: 2px solid rgb(235, 196, 69);
 }
 .calculator-wrapper button.operator-div {
-  grid-area: 3/4/auto/auto;
+  grid-area: div;
 }
 .calculator-wrapper button.operator-mult {
-  grid-area: 4/4/auto/auto;
+  grid-area: mul;
 }
 .calculator-wrapper button.operator-sub {
-  grid-area: 5/4/auto/auto;
+  grid-area: sub;
 }
 .calculator-wrapper button.operator-add {
-  grid-area: 6/4/auto/auto;
+  grid-area: add;
+}
+.calculator-wrapper button[data-fp] {
+  grid-area: fp;
+}
+.calculator-wrapper button[data-calc] {
+  grid-area: calc;
+}
+.calculator-wrapper button[data-num="7"] {
+  grid-area: seven;
+}
+.calculator-wrapper button[data-num="8"] {
+  grid-area: eight;
+}
+.calculator-wrapper button[data-num="9"] {
+  grid-area: nine;
+}
+.calculator-wrapper button[data-num="4"] {
+  grid-area: four;
+}
+.calculator-wrapper button[data-num="5"] {
+  grid-area: five;
+}
+.calculator-wrapper button[data-num="6"] {
+  grid-area: six;
+}
+.calculator-wrapper button[data-num="1"] {
+  grid-area: one;
+}
+.calculator-wrapper button[data-num="2"] {
+  grid-area: two;
+}
+.calculator-wrapper button[data-num="3"] {
+  grid-area: three;
+}
+.calculator-wrapper button[data-num="0"] {
+  grid-area: zero;
+}
+.calculator-wrapper button[data-par][left] {
+  grid-area: parL;
+}
+.calculator-wrapper button[data-par][right] {
+  grid-area: parR;
+}
+.calculator-wrapper .previous {
+  grid-area: prev;
+  font-size: 30px;
+}
+.calculator-wrapper .history {
+  grid-area: history;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+.calculator-wrapper .next {
+  grid-area: next;
+  font-size: 30px;
+}
+.calculator-wrapper button[data-clr] {
+  grid-area: clr;
+}
+.calculator-wrapper button[data-del] {
+  grid-area: del;
 }
 .calculator-wrapper button {
   color: #444;
